--- a/models/standardised/schema/std_transactions.yml
+++ b/models/standardised/schema/std_transactions.yml
@@ -1,5 +1,7 @@
 version: 2
 
+# See std_customers for how data tests can be used
+
 models:
     - name: std_transactions
       description: "Cleaned/standardised transactions information"
